[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Tiro.gd" type="Script" id=1]
[ext_resource path="res://Sons/Tiro.ogg" type="AudioStream" id=2]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.921569, 1, 0, 1 )

[sub_resource type="CapsuleShape" id=3]

[node name="Tiro" type="Area"]
collision_mask = 2147483649
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.441541, 0, 0, 0, 0.399153, 0, 0, 0, 0.120863, 0, 0, 0 )
shape = SubResource( 3 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="SomTiro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -31.342

[node name="Position3D" type="Position3D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Tiro_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
